--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,6 @@
   }
   
   .button {
-    @apply text-balance bg-blue-500 text-white rounded-md p-2;
+    @apply flex-1 text-balance bg-blue-500 text-white rounded-md p-2;
   }
 }
